# vs17clang

./: CMakeLists.txt  CMakeSettings.json
CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp
